<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:transitionName="@string/toolbar"
            app:layout_scrollFlags="scroll">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_alignBottom="@+id/headline"
                    android:src="@drawable/droidcon_windmolen"
                    android:alpha="0.2"
                    />

                <TextView
                    android:id="@+id/headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="22sp"
                    android:transitionName="@string/headline" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/toolbar">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dascription"
                android:layout_marginBottom="16dp"
                android:lineSpacingExtra="1dp"
                android:paddingBottom="16dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:layout_toRightOf="@+id/date"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/dascription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                android:layout_marginTop="8dp"
                android:text="@string/text_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/speaker_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="8dp"
                android:text="@string/speaker_title"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/image"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_below="@+id/speaker_title"
                android:layout_marginTop="8dp"
                android:transitionName="@string/image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:transitionName="@string/speaker"
                android:id="@+id/speaker"
                android:layout_alignTop="@+id/image"
                android:layout_toRightOf="@+id/image"
                android:layout_toEndOf="@+id/image" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:backgroundTint="@color/babbq_yellow"
        app:fabSize="mini"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>
